Добавлено указание относительного пути к файлам и вывод результата выполнения программы в терминал.